--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 GETAPIKEY='5c102a0c-5b49-4f76-80d0-77e03524c70b'
 GETWEATHERAPIKEY='35d51453'
 DOMAIN='https://client-info-by-ip.vercel.app/'
+RAPIDAPIKEY='3435807ce3msh4d73e4e2fc1054ap1d6a1bjsn13acf368cdad'
